<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Main4Activity">

    <TextView
        android:id="@+id/isım.4"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        />
    <Button
        android:id="@+id/trigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trigo"
        android:textColorLink="@color/colorAccent" />

    <Button
        android:id="@+id/derivative"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/derivative" />

    <Button
        android:id="@+id/ıntegral"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ıntegral" />


</LinearLayout>